# advanced_experiment

./: .test.txt.swo  .test.txt.swp  CMakeLists.txt  README.md  package.xml
docs/: basics.md  docker.md  docker_gui.md  git.md  index-temp.md  index.md  index_temp.md  installation.md  preparetions.md  ros_docker.md
launch/: edge_detection.launch  edge_detection_cv_camera.launch  image_acquisition.launch  turtle_operation.launch  turtle_operation_cv_camera.launch
src/: image_acquisition.cpp  turtle_operation.cpp  turtle_operation_cv_camera.cpp
